--- a/EP2 06-10/index.html
+++ b/EP2 06-10/index.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="jogo.html">Jogos <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="hardware.html">Hardware</a>
+                    <a class="nav-link" href="hardware.html">Hardwae</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="celulares.html">Celulares</a>
