--- a/EP2 06-10/index_2.html
+++ b/EP2 06-10/index_2.html
@@ -31,7 +31,7 @@
         </nav>
     </div>
     
-<!-- inicio carrocell-->
+<!-- inicio carrocel-->
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3500">
