--- a/EP2 06-10/index.html
+++ b/EP2 06-10/index.html
@@ -56,7 +56,7 @@
             </ul>
         </nav>
     </header>
-<!-- inicio carrocel-->
+<!-- inicio carrocell-->
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3500">
