--- a/EP2 06-10/Contato.html
+++ b/EP2 06-10/Contato.html
@@ -50,7 +50,7 @@
                 </button>           
     </div>
 <br>
-    <!-- inicio do formulario para contato--->
+    <!-- inicio do formulario para contato-->
     <div class="container contact">
         <div class="row">
             <div class="col-md-3">
